# allowScanner

./: .coverage  .gitignore  Dockerfile  Makefile  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: release-workflow.yml
src/allowscanner/: __init__.py  cli.py  output.py  scanner.py
src/allowscanner/core/: __init__.py  config.py  diff.py  doctor.py  exceptions.py  logging.py  models.py  scope.py  suppress.py
src/allowscanner/formatters/: __init__.py
src/allowscanner/scanners/: __init__.py  cookies.py  cors.py  crawler.py  dns.py  fuzz.py  graphql.py  headers.py  http.py  inject.py  methods.py  paramfind.py  ports.py  secrets.py  ssl.py  subdomain.py  takeover.py  tech.py  vuln.py  waf.py
tests/: test_batch_features.py  test_cli.py  test_cookies_scanner.py  test_cors_scanner.py  test_dns_scanner.py  test_enhancements.py  test_headers_scanner.py  test_http_client.py  test_inject_doctor.py  test_models.py  test_modern_modules.py  test_new_modules.py  test_paramfind.py  test_regressions.py  test_ssl_scanner.py  test_subdomain_scanner.py  test_tech_scanner.py  test_vuln_scanner.py
