[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "allowscanner"
version = "2.0.0"
description = "🛡️ Advanced Web Vulnerability Scanner — detect security issues in web applications"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "0xgetz" }]
keywords = ["security", "scanner", "vulnerability", "web", "pentest", "owasp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Networking :: Monitoring",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp>=3.9,<4",
    "dnspython>=2.6,<3",
    "rich>=13,<14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
allowscanner = "allowscanner.cli:main"

[project.urls]
Homepage = "https://github.com/0xgetz/allowScanner"
Repository = "https://github.com/0xgetz/allowScanner"
Issues = "https://github.com/0xgetz/allowScanner/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/allowscanner"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
